[gd_scene load_steps=36 format=3 uid="uid://d2vrv3fs4nwmm"]

[ext_resource type="Script" path="res://script/level/level_1_1.gd" id="1_pbsla"]
[ext_resource type="Texture2D" uid="uid://b8ak6jwuanmdq" path="res://asset/tiles/floor.png" id="2_imtu5"]
[ext_resource type="Texture2D" uid="uid://cg4gvhn8dkh4x" path="res://asset/tiles/spawn_box.png" id="3_ohx17"]
[ext_resource type="Texture2D" uid="uid://lqxph0syc7ac" path="res://asset/tiles/bricks.png" id="4_vgmwk"]
[ext_resource type="PackedScene" uid="uid://cqe1c836cwb6j" path="res://scene/cek.tscn" id="5_veydc"]
[ext_resource type="PackedScene" uid="uid://de6qmu75j1tmq" path="res://scene/chara/karakter.tscn" id="6_sewmt"]
[ext_resource type="PackedScene" uid="uid://c80ga6hakiurs" path="res://scene/kotak.tscn" id="7_bsg5p"]
[ext_resource type="FontFile" uid="uid://bys4fsq5x5ci6" path="res://style/BULKYPIX.TTF" id="8_4llbd"]
[ext_resource type="Texture2D" uid="uid://kv2rfxxbwein" path="res://asset/btn/btn_sheet.png" id="9_5xiik"]
[ext_resource type="PackedScene" uid="uid://b5sjrqgtkjqt8" path="res://scene/menu/level_cleared.tscn" id="10_346hh"]
[ext_resource type="AudioStream" uid="uid://c2xm1t42epvhv" path="res://asset/sound/sfx/btn3.mp3" id="11_7bxs4"]
[ext_resource type="AudioStream" uid="uid://beeb7o60l0iaj" path="res://asset/sound/bgm3.mp3" id="11_reooj"]
[ext_resource type="PackedScene" uid="uid://d38f1ktc1txr0" path="res://scene/menu/level_paused.tscn" id="11_rrtyp"]
[ext_resource type="AudioStream" uid="uid://b4e158le2f2i6" path="res://asset/sound/sfx/btn8.mp3" id="12_k1qmk"]
[ext_resource type="Texture2D" uid="uid://cr55xci750yw1" path="res://asset/menu/all_num.png" id="12_w733h"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_6m0n5"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_lsy4u"]
texture = ExtResource("2_imtu5")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0
1:0/0 = 0
1:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:0/0/physics_layer_0/angular_velocity = 0.0
0:1/0 = 0
0:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:1/0/physics_layer_0/angular_velocity = 0.0
1:1/0 = 0
1:1/0/physics_layer_0/linear_velocity = Vector2(0, 0)
1:1/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_o24ge"]
texture = ExtResource("3_ohx17")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_7xsv1"]
texture = ExtResource("4_vgmwk")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/physics_layer_0/linear_velocity = Vector2(0, 0)
0:0/0/physics_layer_0/angular_velocity = 0.0

[sub_resource type="TileSet" id="TileSet_r5jyi"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 3
physics_layer_0/collision_mask = 3
physics_layer_0/physics_material = SubResource("PhysicsMaterial_6m0n5")
sources/3 = SubResource("TileSetAtlasSource_lsy4u")
sources/4 = SubResource("TileSetAtlasSource_o24ge")
sources/5 = SubResource("TileSetAtlasSource_7xsv1")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_5ahri"]
texture = ExtResource("9_5xiik")
region_rect = Rect2(0, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_twnj5"]
texture = ExtResource("9_5xiik")
region_rect = Rect2(32, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_n86a1"]
texture = ExtResource("9_5xiik")
region_rect = Rect2(32, 32, 32, 32)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_buelf"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_iun27"]
texture = ExtResource("9_5xiik")
region_rect = Rect2(192, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xsf1n"]
texture = ExtResource("9_5xiik")
region_rect = Rect2(224, 32, 32, 32)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lohg0"]
texture = ExtResource("9_5xiik")
region_rect = Rect2(224, 32, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3cc1"]
atlas = ExtResource("12_w733h")
region = Rect2(0, 0, 640, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vfwo2"]
atlas = ExtResource("12_w733h")
region = Rect2(640, 0, 64, 64)

[sub_resource type="Animation" id="Animation_3bhua"]
length = 0.001

[sub_resource type="Animation" id="Animation_x8owk"]
resource_name = "pause"

[sub_resource type="Animation" id="Animation_oc1qn"]
resource_name = "pause_hover"

[sub_resource type="Animation" id="Animation_5rdi2"]
resource_name = "reset"

[sub_resource type="Animation" id="Animation_ikqwf"]
resource_name = "reset_hover"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ghkk8"]
_data = {
"RESET": SubResource("Animation_3bhua"),
"pause": SubResource("Animation_x8owk"),
"pause_hover": SubResource("Animation_oc1qn"),
"reset": SubResource("Animation_5rdi2"),
"reset_hover": SubResource("Animation_ikqwf")
}

[node name="level-1" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="level_controller" type="Node2D" parent="."]
script = ExtResource("1_pbsla")

[node name="TileMap" type="TileMap" parent="level_controller"]
tile_set = SubResource("TileSet_r5jyi")
rendering_quadrant_size = 32
format = 2
layer_0/tile_data = PackedInt32Array(458767, 3, 0, 524303, 3, 0, 589839, 3, 0, 655375, 3, 0, 720911, 3, 0, 786447, 3, 0, 786448, 3, 0, 786449, 3, 0, 786450, 3, 0, 786451, 3, 0, 786452, 3, 0, 720916, 3, 0, 655380, 3, 0, 589844, 3, 0, 524308, 3, 0, 458772, 3, 0, 458771, 3, 0, 458770, 3, 0, 458769, 3, 0, 458768, 3, 0, 524304, 3, 0, 720912, 3, 0, 720913, 3, 0, 720914, 3, 0, 720915, 3, 0, 589843, 3, 0, 524307, 3, 0, 524306, 3, 0, 524305, 3, 0, 589840, 3, 0, 589841, 3, 0, 589842, 3, 0, 524301, 3, 0, 720909, 3, 0, 524310, 3, 0, 720918, 3, 0, 851983, 3, 0, 851984, 3, 0, 851985, 3, 0, 851986, 3, 0, 851987, 3, 0, 851988, 3, 0, 524302, 3, 0, 589838, 3, 0, 655374, 3, 0, 720910, 3, 0, 786446, 3, 0, 524309, 3, 0, 589845, 3, 0, 655381, 3, 0, 720917, 3, 0, 786453, 3, 0, 589837, 3, 0, 655373, 3, 0, 589846, 3, 0, 655382, 3, 0, 786445, 3, 0, 786454, 3, 0, 524311, 3, 0, 589847, 3, 0, 655383, 3, 0, 720919, 3, 0, 786455, 3, 0, 851989, 3, 0, 458773, 3, 0, 655376, 3, 0, 655377, 3, 0, 655378, 3, 0, 655379, 3, 0, 458766, 5, 0, 458765, 5, 0, 458764, 5, 0, 524300, 5, 0, 589836, 5, 0, 655372, 5, 0, 720908, 5, 0, 786444, 5, 0, 851980, 5, 0, 851981, 5, 0, 851982, 5, 0, 917518, 5, 0, 917519, 5, 0, 917520, 5, 0, 917521, 5, 0, 917522, 5, 0, 917523, 5, 0, 917524, 5, 0, 917525, 5, 0, 917526, 5, 0, 851990, 5, 0, 851991, 5, 0, 851992, 5, 0, 786456, 5, 0, 720920, 5, 0, 655384, 5, 0, 589848, 5, 0, 524312, 5, 0, 458776, 5, 0, 458775, 5, 0, 458774, 5, 0, 393238, 5, 0, 393237, 5, 0, 393236, 5, 0, 393235, 5, 0, 393234, 5, 0, 393233, 5, 0, 393232, 5, 0, 393231, 5, 0, 393230, 5, 0)

[node name="grup_cek" type="Node2D" parent="level_controller"]

[node name="cek i" parent="level_controller/grup_cek" instance=ExtResource("5_veydc")]
position = Vector2(512, 320)

[node name="cek z" parent="level_controller/grup_cek" instance=ExtResource("5_veydc")]
position = Vector2(544, 320)

[node name="cek i 2" parent="level_controller/grup_cek" instance=ExtResource("5_veydc")]
position = Vector2(576, 320)

[node name="cek n" parent="level_controller/grup_cek" instance=ExtResource("5_veydc")]
position = Vector2(608, 320)

[node name="karakter" parent="level_controller" instance=ExtResource("6_sewmt")]
position = Vector2(448, 288)

[node name="grup_kotak" type="Node2D" parent="level_controller"]

[node name="i" parent="level_controller/grup_kotak" groups=["i"] instance=ExtResource("7_bsg5p")]
position = Vector2(480, 288)

[node name="z" parent="level_controller/grup_kotak" groups=["z"] instance=ExtResource("7_bsg5p")]
position = Vector2(608, 288)

[node name="i 2" parent="level_controller/grup_kotak" groups=["i"] instance=ExtResource("7_bsg5p")]
position = Vector2(640, 320)

[node name="n" parent="level_controller/grup_kotak" groups=["n"] instance=ExtResource("7_bsg5p")]
position = Vector2(576, 352)

[node name="j" parent="level_controller/grup_kotak" groups=["j"] instance=ExtResource("7_bsg5p")]
position = Vector2(544, 288)

[node name="wall" type="StaticBody2D" parent="level_controller"]
position = Vector2(448, 192)

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="level_controller/wall"]
build_mode = 1
polygon = PackedVector2Array(0, 0, 288, 0, 288, 32, 352, 32, 352, 256, 288, 256, 288, 288, 0, 288, 0, 256, -64, 256, -64, 32, 0, 32, 32, 32, 256, 32, 256, 64, 320, 64, 320, 224, 256, 224, 256, 256, 32, 256, 32, 224, -32, 224, -32, 64, 32, 64, 32, 0, 0, 32)

[node name="menu" type="CanvasLayer" parent="level_controller"]

[node name="pause" type="Button" parent="level_controller/menu"]
offset_right = 96.0
offset_bottom = 96.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("8_4llbd")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_5ahri")
theme_override_styles/hover = SubResource("StyleBoxTexture_twnj5")
theme_override_styles/pressed = SubResource("StyleBoxTexture_n86a1")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_buelf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_buelf")

[node name="reset" type="Button" parent="level_controller/menu"]
offset_left = 96.0
offset_right = 192.0
offset_bottom = 93.0
theme_type_variation = &"FlatButton"
theme_override_colors/font_outline_color = Color(0, 0, 0, 0)
theme_override_colors/icon_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_hover_pressed_color = Color(0, 0, 0, 0)
theme_override_colors/icon_focus_color = Color(0, 0, 0, 0)
theme_override_fonts/font = ExtResource("8_4llbd")
theme_override_font_sizes/font_size = 50
theme_override_styles/normal = SubResource("StyleBoxTexture_iun27")
theme_override_styles/hover = SubResource("StyleBoxTexture_xsf1n")
theme_override_styles/pressed = SubResource("StyleBoxTexture_lohg0")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_buelf")
theme_override_styles/focus = SubResource("StyleBoxEmpty_buelf")

[node name="level_selesai" parent="." instance=ExtResource("10_346hh")]
layout_mode = 1

[node name="level_paused" parent="." instance=ExtResource("11_rrtyp")]
visible = false
layout_mode = 1

[node name="numbers_con" type="HBoxContainer" parent="level_paused"]
custom_minimum_size = Vector2(449, 163)
layout_mode = 0

[node name="space" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="ch" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="ch_num" type="Sprite2D" parent="level_paused/numbers_con/ch"]
position = Vector2(32, 32)
texture = SubResource("AtlasTexture_x3cc1")
offset = Vector2(0, 101)
hframes = 10
frame = 1

[node name="strip" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="strip" type="Sprite2D" parent="level_paused/numbers_con/strip"]
position = Vector2(28, 32)
texture = SubResource("AtlasTexture_vfwo2")
offset = Vector2(0, 101)

[node name="lvl" type="BoxContainer" parent="level_paused/numbers_con"]
custom_minimum_size = Vector2(64, 0)
layout_mode = 2

[node name="lvl_num" type="Sprite2D" parent="level_paused/numbers_con/lvl"]
position = Vector2(32, 32)
texture = SubResource("AtlasTexture_x3cc1")
offset = Vector2(0, 101)
hframes = 10
frame = 1

[node name="btn_hover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_7bxs4")
bus = &"SFX"

[node name="btn_click" type="AudioStreamPlayer" parent="."]
stream = ExtResource("12_k1qmk")
volume_db = -5.0
bus = &"SFX"

[node name="bgm" type="AudioStreamPlayer" parent="."]
stream = ExtResource("11_reooj")
volume_db = -5.0
autoplay = true
bus = &"Music"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ghkk8")
}

[connection signal="ch_val" from="level_controller" to="level_selesai" method="_on_level_controller_ch_val"]
[connection signal="ch_val" from="level_controller" to="level_paused" method="_on_level_controller_ch_val"]
[connection signal="clear_val" from="level_controller" to="level_selesai" method="_on_level_controller_clear_val"]
[connection signal="clear_val" from="level_controller" to="level_paused" method="_on_level_controller_clear_val"]
[connection signal="isLessThan_1" from="level_controller" to="level_selesai" method="_on_level_controller_is_less_than_1"]
[connection signal="isLessThan_1" from="level_controller" to="level_paused" method="_on_level_controller_is_less_than_1"]
[connection signal="isLessThan_2" from="level_controller" to="level_selesai" method="_on_level_controller_is_less_than_2"]
[connection signal="isLessThan_2" from="level_controller" to="level_paused" method="_on_level_controller_is_less_than_2"]
[connection signal="lvl_val" from="level_controller" to="level_selesai" method="_on_level_controller_lvl_val"]
[connection signal="lvl_val" from="level_controller" to="level_paused" method="_on_level_controller_lvl_val"]
[connection signal="star" from="level_controller" to="level_selesai" method="_on_level_controller_star"]
[connection signal="star" from="level_controller" to="level_paused" method="_on_level_controller_star"]
[connection signal="isMoving" from="level_controller/karakter" to="level_controller" method="_on_karakter_is_moving"]
[connection signal="mouse_entered" from="level_controller/menu/pause" to="level_controller" method="_on_pause_mouse_entered"]
[connection signal="pressed" from="level_controller/menu/pause" to="level_controller" method="_on_pause_pressed"]
[connection signal="mouse_entered" from="level_controller/menu/reset" to="level_controller" method="_on_reset_mouse_entered"]
[connection signal="pressed" from="level_controller/menu/reset" to="level_controller" method="_on_reset_pressed"]
